index.css
/*css for the preloader*/
#preloader {
	background-color: #0f0f0f;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column; /* Display children in a column */
    justify-content: center;
    align-items: center;
	z-index: 9999;
}

#loader {
    width: 45px;
    height: 40px;
    background: linear-gradient(#0000 calc(1*100%/6),#fff 0 calc(3*100%/6),#0000 0),
                linear-gradient(#0000 calc(2*100%/6),#fff 0 calc(4*100%/6),#0000 0),
                linear-gradient(#0000 calc(3*100%/6),#fff 0 calc(5*100%/6),#0000 0);
    background-size: 10px 400%;
    background-repeat: no-repeat;
    animation: matrix 1s infinite linear;
}

@keyframes matrix {
    0% {
        background-position: 0% 100%, 50% 100%, 100% 100%;
    }

    100% {
        background-position: 0% 0%, 50% 0%, 100% 0%;
    }
}

#random {
    margin-top: 20px; /* Adjust spacing as needed */
    font-size: 16px; /* Adjust font size as needed */
    text-align: center; /* Center align text */
	color: #fff; /* Set text color to white */
}

#content {
    display: none;
}
/*end*/

/*css for the header, logo, tuptuptulin's space,questroom*/
.header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 10px;
	padding-top: 10px; 
	padding-bottom: 15px;
}

.logo-and-portfolioName{
	display: flex;
	align-items: center;
}

.logo img {
	height: 40px;
	width: auto;
	margin-right: 10px;
}

.portfolioName {
	font-family: 'ginto';
	font-size: 17px;
	font-weight: bold;
}

.learn-more {
	text-align: right;
}

.quest {
	color: #ff0;
	text-shadow: 0 0 3px #ff4500,0 0 1px #ff4500,0 0 2px #ff4500,0 0 1px #ff4500,0 0 2px #ff4500;
}
/*end*/
/*css for webring*/
.webring {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	height: 100%;
}

.webring img{
	height: 98%;
}
/*end*/
/*css for whoami, explore my space, whoami and the robot picture*/
.whoamiDiv {
	display: flex;
	flex-direction: row;
	width: 100%;
	height: 289px;
	justify-content: space-between;
	align-items: center;
}

.left {
	display: flex;
	flex-direction: column;
}

.right{
    height: 100%;  
}

.right img {
    max-height: 100%; 
    max-width: 100%; 
}

.mainMsg {
	font-family: 'ginto';
	font-size: 44px;
}

#whoami, #cursor {
	font-family: "terminal";
}

#cursor {
	display: inline-block;
	width: 10px;
	height: 20px;
	background-color: black;
	animation: blink 1s infinite;
}

@keyframes blink {
	50% { opacity: 0; }
}

.whoamiDiv .skills #whoami {
	font-size: 1.5em;
	font-weight: bold;
	height: 1.5em;
}
/*end*/
/*css for the navigation tab*/
.tab {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	background-color: #2B2D31;
	border-radius: 8px;
	padding: 12px;
	height: 22px;
	cursor: pointer;
	max-width: fit-content;
	padding-left: 20px; 
	padding-right: 20px;
	margin-right: 5px;
	margin-left: 5px;
  
}

.nav {
	display: flex;
    flex-direction: row;
	justify-content: center;
	font-family: 'woodpecker';
	width: 100%;
}

.navGroup {
	display: flex;
    flex-direction: row;
}

.tab {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	background-color: #222427;
	border-radius: 8px;
	padding: 12px;
	height: 22px;
	cursor: pointer;
	max-width: fit-content;
	padding-left: 20px; 
	padding-right: 20px;
	margin-right: 5px;
	margin-left: 5px;
  
}

.tab.tabBlogs {
	margin-left: 0px;
}

.tab.tabUtilities {
	margin-right: 0px;
}

.tab:hover {
	background-color: #270470;
}

.tab img {
	max-height: 100%;
	margin-right: 10px;
}

.tabimg1 {
	border-color: #ff641d!important;
}
/*end*/
/*css for idcard*/
.idcard {
	display: flex;
	align-items: center;
	background-color: #222427;
	width: 100%;
	overflow: hidden;
	height: 350px;
	border-radius: 8px;
}

.aboutMe {
	display: flex;
	align-items: center;
	width: 50%;
	float: left;
	box-sizing: border-box;
	padding: 10px; /* optional, adds spacing inside the box */
}
.reverseEngineeringSS {
	display: flex;
	align-items: center;
	width: 50%;
	height: 100px; 
	float: left;
	box-sizing: border-box;
	padding: 10px;
}

.normal {
	font-family: 'normal';
}

.green {
	color: #4EBB19;
}

.pink {
	color: #FC1FCB;
}

.colon {
	color: #E55B13;
	font-weight: bold;
}

.p{
	font-family: 'normal';
	font-size: 20px;
}

.pnormal{
	font-family: 'normal';
	font-size: 14px;
}
/*end*/
/*css for blogsshowcase*/
.blogShowcase{
	display: flex;
	flex-direction: column;
}

.slideblog{
	display: flex;
	flex-direction: row;
    justify-content: space-between;
}

.blog1 {
	display: flex;
	flex-direction: column;
	border-radius: 12px;
	background-color: #222427;
	transition: all 0.2s ease-in-out;
	width: 310px;
	height: 288px;
	overflow: hidden;
}

.image-wrapper {
	height: 100%;
}

.image-wrapper img {
	max-width: 100%;
	max-height: 100%;
	width: 100%;
	height: 100%; 
}

.text-wrapper {
	padding: 10px;
}

.blog2 {
	display: flex;
	flex-direction: column;
	border-radius: 12px;
	background-color: #222427;
	transition: all 0.2s ease-in-out;
	width: 270px;
	height: 288px;
	overflow: hidden;
}

.blog2 img {
	height: 177.38px;
}

.hover {
	overflow: hidden;
}
.hover:hover {
	transform: scale(1.05);
}

.blogcolumnTwo {
	display: flex;
	flex-direction: row;
	gap: 15px;
}
/*end*/
/*css for the projects part*/

.slider-item {
	background-color: #222427;
	min-height: 120px;
	min-width: 253px;
	font-size: 24px;
	padding: 16px;
	border-radius: 8px;
}

.slideprojects {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	padding-top: 10px;
}

.slider-itemOne, .slider-itemTwo {
	display: flex;
    justify-content: center; 
	background-color: #222427;
    height: 225px;
    width: 49%;
    border-radius: 8px;
	overflow: hidden;
}

.projectDetails {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	margin-bottom: 20px;
}

.projectDesc {
	width: 93%;
	overflow: hidden;
	border-radius: 0%;
}

.projectHeader, .projectStats, .projectDescription {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
    align-items: center;
    margin-top: 20px;
}

.projectDescription {
	height: 114px !important;
	padding-bottom: 2px;
}

.projectDescription p{
	margin-top: 0 !important;
}

.programmingClass {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.programmingClass img, .githubStars img, .download img {
    height: 22px;
    width: 22px;
}

.projectLogo {
	display: flex;
	align-items: center;
	margin-left: 20px;
}

.projectLogo img {
	height: 100%;
	border-radius: 0, 0, 50px, 50px;
}

.projectStats {
	display: flex;
	justify-content: space-between;
}

.download {
	border:  1px solid #0f0f0f41;
	padding-right: 7px;
	padding-left: 7px;
	cursor: pointer;
	display: flex;
	justify-content: center;
	align-items: center;
}

.download:hover {
	background-color: #270470;
}
/*css for the preview button*/
.ui-btn {
	border:  1px solid #0f0f0f41;;
	--btn-padding: 15px 5px;
	--btn-hover-bg: #270470;
	--btn-transition: .3s;
	--btn-animation-duration: 1.2s;
	--btn-letter-spacing: .1rem;
	--btn-shadow-color: #0f0f0f;
	--btn-shadow: 0 2px 10px 0 var(--btn-shadow-color);
	--hover-btn-color: #FAC921;
	--default-btn-color: #fff;
	
  }
  
  /* button settings 👆 */
  
  .ui-btn {
	box-sizing: border-box;
	padding: var(--btn-padding);
	display: flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	transition: var(--btn-transition);
	overflow: hidden;
  }
  
  .ui-btn span {
	letter-spacing: var(--btn-letter-spacing);
	transition: var(--btn-transition);
	box-sizing: border-box;
	position: relative;
	background: inherit;
  }
  
  .ui-btn span::before {
	box-sizing: border-box;
	position: absolute;
	content: "";
	background: inherit;
  }
  
  .ui-btn:hover, .ui-btn:focus {
	background: var(--btn-hover-bg);
  }
  
  .ui-btn:hover span, .ui-btn:focus span {
	color: var(--hover-btn-color);
  }
  
  .ui-btn:hover span::before, .ui-btn:focus span::before {
	animation: chitchat linear both var(--btn-animation-duration);
  }
  
  @keyframes chitchat {
	0% {
	  content: "#";
	}
  
	5% {
	  content: ".";
	}
  
	10% {
	  content: "^{";
	}
  
	15% {
	  content: "-!";
	}
  
	20% {
	  content: "#$_";
	}
  
	25% {
	  content: "№:0";
	}
  
	30% {
	  content: "#{+.";
	}
  
	35% {
	  content: "@}-?";
	}
  
	40% {
	  content: "?{4@%";
	}
  
	45% {
	  content: "=.,^!";
	}
  
	50% {
	  content: "?2@%";
	}
  
	55% {
	  content: "\;1}]";
	}
  
	60% {
	  content: "?{%:%";
	  right: 0;
	}
  
	65% {
	  content: "|{f[4";
	  right: 0;
	}
  
	70% {
	  content: "{4%0%";
	  right: 0;
	}
  
	75% {
	  content: "'1_0<";
	  right: 0;
	}
  
	80% {
	  content: "{0%";
	  right: 0;
	}
  
	85% {
	  content: "]>'";
	  right: 0;
	}
  
	90% {
	  content: "4";
	  right: 0;
	}
  
	95% {
	  content: "2";
	  right: 0;
	}
  
	100% {
	  content: "";
	  right: 0;
	}
  }
/*end*/
/*end*/
/*footer and copyright*/
.footer {
	background-color: #2B2D31;
	border-radius: 8px;
	height: 78px;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-content: space-between;
}

.f1 {
	max-width: 100%;
	max-height: 100%;
}

.f1 img {
	max-width: 100%;
	max-height: 100%;
}

.f2 {
	max-width: 100%;
	max-height: 100%;
	display: flex;
	flex-direction: column;	
	justify-content: center;
	gap: 8px;
}

.f2 img{
	width: 30px;
	height: 30px;
}

.f2 p {
	font-family: 'normal';
}

.f3 {
	height: 100%;
	width: fit-content;
	display: flex;
    justify-content: space-between;
}

.f3 img {
	height: 100%;
}

.nb {
	margin: 0;
}

.robot {
	display: flex;
	flex-direction: row;
}

.links {
	display: flex;
	gap: 10px;
}

.links a img {
    transition: all 0.2s ease-in-out; /* Define the transition effect */
}

.links a:hover img {
    transform: scale(1.4); /* Enlarge the image by 10% on hover */
}

.fix2 {
	margin: 0;
}

.copyright {
	font-family: 'normal';
}
/*end*/
/*aah shit, here we go again for mobile devices*/
@media (max-width: 850px) {
/*community css blocks*/
	
/*divs with display: none*/
.reverseEngineeringSS, .blogcolumnTwo, .f1, .f3, .right, .slider-itemTwo, .navGroup {
	display: none;
}
/*end*/
/*css for centering child divs*/
.slideblog, .footer, .nb {
	display: flex;
	justify-content: center;
	align-items: center;  
}
/*end*/
/*blog section*/
.blogcolumnOne, .blog1, .slider-itemOne {
	width: 100%;
}
/*end*/

/*community css blocks end*/
/*header css*/
.header {
	padding: 0;
	margin-bottom: 0;
}
/*end*/
/*whoami div css*/
.whoamiDiv {
	height: auto;
	overflow: hidden;
	border-radius: 0px;
	margin-bottom: 5px;
}

.mainMsg p {
	margin: 0px;		
}

.skills {
	font-size: 11px;
	height: 17px;
}

#whoami {
	display: block;
}
/*end*/
/*idcard css*/
.idcard {
	height: fit-content;
}

.aboutMe {
	width: 100%;
}

p.normal {
	margin: 0px;
	
}

.aboutMe {
	padding: 0px;
	margin: 4px;
}
/*end*/
/*project*/
.slider-itemOne, .slider-itemTwo {
    height: 230px;
    padding: 10px;
}
/*end*/
/*webrings*/
.webring {
	display: none !important;
}
/*end*/
}

